<resources>
    <string name="app_name">Assignment2</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Calculator</string>
    <string name="task_4">Movie List</string>
    <string name="image_desc">My profile picture</string>
    <string name="bg_image">Background image</string>
    <string name="name">Manali Tawar</string>
    <string name="sub_text">Doing Assignment to learn Android programming</string>
    <string name="grid1">GRID 1 Activity</string>
    <string name="button1">Button-1</string>
    <string name="button2">Button-2</string>
    <string name="button3">Button-3</string>
    <string name="button4">Button-4</string>
    <string name="button5">Button-5</string>
    <string name="save">SAVE</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="grid2_b1">B1</string>
    <string name="grid2_b2">B2</string>
    <string name="grid2_b3">B3</string>
    <string name="grid2_b4">B4</string>
    <string name="user_text">User</string>
    <string name="input_something">Input Something</string>
    <string name="grid2_b5">B5</string>
    <string name="grid2_b6">B6</string>
    <string name="grid2_b7">B7</string>
    <string name="search">Search</string>
    <string name="ac">AC</string>
    <string name="equal">=</string>
    <string name="div">/</string>
    <string name="mult">*</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="mod">%</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="c">C</string>
    <string name="poster_image">Poster Image</string>
    <string name="info">Info</string>
</resources>