<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:background="@color/black">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/primary_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/theme2_primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primary_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                tools:ignore="NestedWeights,RtlCompat"
                android:textSize="40sp"
                />

            <TextView
                android:id="@+id/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:gravity="center_vertical"
                tools:ignore="RtlCompat"
                android:textColor="@color/white"
                android:textSize="40sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/clear_everything"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text = "@string/ac"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights"/>


            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/c"
                tools:ignore="ButtonStyle,NestedWeights"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/div"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights,TextContrastCheck" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mult"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/num_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights"/>
            <Button
                android:id="@+id/num_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_8"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights"/>
            <Button
                android:id="@+id/num_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights"/>
            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/minus"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights"/>

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
            <Button
                android:id="@+id/num_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_4"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights"/>
            <Button
                android:id="@+id/num_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_5"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights"/>
            <Button
                android:id="@+id/num_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights"/>
            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus"
                android:layout_margin="@dimen/button_margin"
                tools:ignore="ButtonStyle,NestedWeights"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:weightSum="4"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="3"
                tools:ignore="NestedWeights">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/num_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_1"
                        android:layout_margin="@dimen/button_margin"
                        tools:ignore="ButtonStyle,NestedWeights"/>

                    <Button
                        android:id="@+id/num_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_2"
                        android:layout_margin="@dimen/button_margin"
                        tools:ignore="ButtonStyle,NestedWeights"/>

                    <Button
                        android:id="@+id/num_3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_3"
                        android:layout_margin="@dimen/button_margin"
                        tools:ignore="ButtonStyle,NestedWeights"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/num_0"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="@string/_0"
                        android:layout_margin="@dimen/button_margin"
                        tools:ignore="ButtonStyle,NestedWeights" />

                    <Button
                        android:id="@+id/decimal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/decimal"
                        android:layout_margin="@dimen/button_margin"
                        tools:ignore="ButtonStyle,NestedWeights"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/equal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/equal"
                    android:layout_margin="@dimen/button_margin"
                    tools:ignore="ButtonStyle,NestedWeights"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

