<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/primary_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_ac_unit_24"
        app:title="Assign2"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primary_toolbar"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/bg_image"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:fontFamily="@font/allura"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/sub_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_text"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:gravity="center"
                android:fontFamily="@font/allura"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>